--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:title" content="Bolsonaro 2º Turno — Apoio ao Jair Bolsonaro com seu nome" />
   <meta property="og:description"
     content="Gere seu flyer personalizado com seu nome de apoio ao Jair Bolsonaro para o segundo turno das eleições brasileira." />
-  <meta property="og:image" itemprop="image" content="https://joaoeymard.github.io/bolsonaro2turno/metadata.png" />
+  <meta property="og:image" itemprop="image" content="https://joaoeymard.github.io/bolsonaro2turno/metadata.png?v=2" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
@@ -25,7 +25,7 @@
   <meta property="twitter:title" content="Bolsonaro 2º Turno — Apoio ao Jair Bolsonaro com seu nome" />
   <meta property="twitter:description"
     content="Gere seu flyer personalizado com seu nome de apoio ao Jair Bolsonaro para o segundo turno das eleições brasileira." />
-  <meta property="twitter:image" content="https://joaoeymard.github.io/bolsonaro2turno/metadata.png" />
+  <meta property="twitter:image" content="https://joaoeymard.github.io/bolsonaro2turno/metadata.png?v=2" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -55,14 +55,14 @@
     <section id="menu" class="menu-principal">
       <p class="label">Escolha uma opção:</p>
       <button onclick="clickNome()" class="btn btnFull">
-        <img src="./apoioBolsonaro22.png" alt="Menu" />
+        <img src="./apoioBolsonaro22.png?v=2" alt="Menu" />
         <div>
           <p>Coloque seu</p>
           <span class="menuBtnDestaque">Nome</span>
         </div>
       </button>
       <button onclick="clickFoto()" class="btn btnFull" style="margin-bottom: 25px;">
-        <img src="./bannerInicial.png" alt="Menu" />
+        <img src="./bannerInicial.png?v=2" alt="Menu" />
         <div>
           <p>Coloque sua</p>
           <span class="menuBtnDestaque">Foto</span>
