--- a/index.html
+++ b/index.html
@@ -5,28 +5,25 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bolsonaro 2º Turno</title>
+  <title>Brasil acima de tudo, Deus acima de todos</title>
 
-  <meta name="title" content="Bolsonaro 2º Turno — Apoio ao Jair Bolsonaro com seu nome" />
-  <meta name="description"
-    content="Gere seu flyer personalizado com seu nome de apoio ao Jair Bolsonaro para o segundo turno das eleições brasileira." />
+  <meta name="title" content="Brasil acima de tudo, Deus acima de todos" />
+  <meta name="description" content="Gere seu flyer personalizado com seu nome de apoio ao Brasil." />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://joaoeymard.github.io/bolsonaro2turno/" />
-  <meta property="og:title" content="Bolsonaro 2º Turno — Apoio ao Jair Bolsonaro com seu nome" />
-  <meta property="og:description"
-    content="Gere seu flyer personalizado com seu nome de apoio ao Jair Bolsonaro para o segundo turno das eleições brasileira." />
+  <meta property="og:url" content="https://joaoeymard.github.io/tocombrasil/" />
+  <meta property="og:title" content="Brasil acima de tudo, Deus acima de todos" />
+  <meta property="og:description" content="Gere seu flyer personalizado com seu nome de apoio ao Brasil." />
   <meta property="og:image" itemprop="image"
-    content="https://joaoeymard.github.io/bolsonaro2turno/metadataBrasil.png?v=2" />
+    content="https://joaoeymard.github.io/tocombrasil/metadataBrasil.png?v=2" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://joaoeymard.github.io/bolsonaro2turno/" />
-  <meta property="twitter:title" content="Bolsonaro 2º Turno — Apoio ao Jair Bolsonaro com seu nome" />
-  <meta property="twitter:description"
-    content="Gere seu flyer personalizado com seu nome de apoio ao Jair Bolsonaro para o segundo turno das eleições brasileira." />
-  <meta property="twitter:image" content="https://joaoeymard.github.io/bolsonaro2turno/metadataBrasil.png?v=2" />
+  <meta property="twitter:url" content="https://joaoeymard.github.io/tocombrasil/" />
+  <meta property="twitter:title" content="Brasil acima de tudo, Deus acima de todos" />
+  <meta property="twitter:description" content="Gere seu flyer personalizado com seu nome de apoio ao Brasil." />
+  <meta property="twitter:image" content="https://joaoeymard.github.io/tocombrasil/metadataBrasil.png?v=2" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
