--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Brasil acima de tudo, Deus acima de todos</title>
+  <title>Tô com Brasil</title>
 
-  <meta name="title" content="Brasil acima de tudo, Deus acima de todos" />
+  <meta name="title" content="Tô com Brasil" />
   <meta name="description" content="Gere seu flyer personalizado com seu nome de apoio ao Brasil." />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://joaoeymard.github.io/tocombrasil/" />
-  <meta property="og:title" content="Brasil acima de tudo, Deus acima de todos" />
+  <meta property="og:title" content="Tô com Brasil" />
   <meta property="og:description" content="Gere seu flyer personalizado com seu nome de apoio ao Brasil." />
   <meta property="og:image" itemprop="image"
     content="https://joaoeymard.github.io/tocombrasil/metadataBrasil.png?v=2" />
@@ -21,7 +21,7 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://joaoeymard.github.io/tocombrasil/" />
-  <meta property="twitter:title" content="Brasil acima de tudo, Deus acima de todos" />
+  <meta property="twitter:title" content="Tô com Brasil" />
   <meta property="twitter:description" content="Gere seu flyer personalizado com seu nome de apoio ao Brasil." />
   <meta property="twitter:image" content="https://joaoeymard.github.io/tocombrasil/metadataBrasil.png?v=2" />
 
