--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
       <canvas width="1080" height="1080"></canvas>
 
-      <smartphone>
+      <!-- <smartphone>
         Olá, me chamo Matheus Cristian, estou em período de mudança para uma
         casa nova, colabore com meu chá de casa nova com qualquer valor através
         do pix, segue minha chave pix:
@@ -273,7 +273,7 @@
           clicando aqui neste link do Nubank
           <img src="img/nubank-logo.svg" class="nubank" />
         </a>
-      </smartphone>
+      </smartphone> -->
 
       <footer>
         Desenvolvido por:
